--- a/blat06/CodeBlatt6.html
+++ b/blat06/CodeBlatt6.html
@@ -92,7 +92,7 @@
               uniform mat4 uProjectionMatrix;
   
 // BEGIN MUSTERLOESUNG AUFGABE 2b
-
+            
 // END MUSTERLOESUNG AUFGABE 2b
             `;
   
@@ -293,8 +293,22 @@
             ];
   
 // BEGIN MUSTERLOESUNG AUFGABE 2a
-  
-// END MUSTERLOESUNG AUFGABE 2a
+            const positionBuffer = gl.createBuffer();
+            gl.bindBuffer( gl.ARRAY_BUFFER, positionBuffer );
+            gl.bufferData( gl.ARRAY_BUFFER, new Float32Array(positions), gl.STATIC_DRAW );
+
+            const indexBuffer = gl.createBuffer();
+            gl.bindBuffer( gl.ELEMENT_ARRAY_BUFFER, indexBuffer );
+            gl.bufferData( gl.ELEMENT_ARRAY_BUFFER, new Uint16Array( indices ), gl.STATIC_DRAW );
+            
+            const colorBuffer = gl.createBuffer();
+            gl.bindBuffer( gl.ARRAY_BUFFER, colorBuffer );
+            gl.bufferData( gl.ARRAY_BUFFER, new Uint8Array( colors ), gl.STATIC_DRAW );
+
+            const normalBuffer = gl.createBuffer();
+            gl.bindBuffer( gl.ARRAY_BUFFER, normalBuffer );
+            gl.bufferData( gl.ARRAY_BUFFER, new Float32Array( vertexNormals ), gl.STATIC_DRAW );
+
   
             return {
                 position: positionBuffer,
