--- a/blat06/CodeBlatt6.html
+++ b/blat06/CodeBlatt6.html
@@ -92,7 +92,8 @@
               uniform mat4 uProjectionMatrix;
   
 // BEGIN MUSTERLOESUNG AUFGABE 2b
-            
+            varying vec3 vPosition;
+            varying 
 // END MUSTERLOESUNG AUFGABE 2b
             `;
   
