--- a/blat07/CodeBlatt7.html
+++ b/blat07/CodeBlatt7.html
@@ -95,6 +95,8 @@
               varying vec3 vNormal;
 
 // BEGIN AUFGABE 2 TEIL 1
+              attribute vec2 aTextureCoord; // im Hauptprogramm pro Vertex angegeben
+              varying vec2 vTexCoord;
 
 // END AUFGABE 2 TEIL 1
   
@@ -105,6 +107,7 @@
 
 // BEGIN AUFGABE 2 TEIL 2
 
+              vTexCoord = aTextureCoord;
 // END AUFGABE 2 TEIL 2
   
               }
@@ -130,11 +133,13 @@
                 varying vec3 vNormal;
                 varying vec3 vColor;
 // BEGIN AUFGABE 2 TEIL 3
-
+                varying vec2 vTexCoord;
+                uniform sampler2D myTexture;
 // END AUFGABE 2 TEIL 3
 
                 void main(void) {
   
+                    vec4 texelColor = texture2D( myTexture, vTexCoord );
                     // ambient
                     vec3 ambientTerm = uCAmbient * uLightColor;
 
@@ -149,9 +154,12 @@
                     float cos_nh = max(dot(vNormal, h), 0.0);
                     vec3 specularTerm = uCSpecular * pow(cos_nh, uShine) * uLightColor;
 
+                    // Phong-Lighting
+                    vec3 vLighting = ambientTerm + diffuseTerm + specularTerm;
+
 
 // BEGIN AUFGABE 2 TEIL 4
-
+                    gl_FragColor = vec4( vLighting, 1) * texture2D( myTexture, vTexCoord );
 // END AUFGABE 2 TEIL 4
                 }
             `;
