--- a/blat09/CodeBlatt9.html
+++ b/blat09/CodeBlatt9.html
@@ -264,7 +264,9 @@ Verschiebe Punkte : <input type="checkbox" id="movePoints" onclick="moveCheckBox
         this.p3 = new Point3D(p3.x, p3.y, p3.z, p3.w);
 
 // BEGIN AUFGABE a
-       
+        this.drawFrame = function (t) {
+
+        }
 // END AUFGABE a
 
 
